--- a/projetos-modelos/JdbcPagingReaderJob/src/main/resources/application.properties
+++ b/projetos-modelos/JdbcPagingReaderJob/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/spring_batch
-spring.datasource.username=user
-spring.datasource.password=123456
-app.datasource.jdbcUrl=jdbc:mysql://localhost:3306/app
-app.datasource.username=user
-app.datasource.password=123456
-spring.batch.initialize-schema=always
-# Adicionar para mostrar no banco de dados
-#logging.level.org.springframework.batch.item.database=DEBUG
+spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/jobrepository
+spring.datasource.username=developer
+spring.datasource.password=developer
+
+aplicacao.datasource.jdbcUrl=jdbc:mysql://localhost:3306/appcursobatch
+aplicacao.datasource.username=developer
+aplicacao.datasource.password=developer
+
+# nunca criar as tabelas, caso j? existam o spring batch ignora
+spring.batch.jdbc.initialize-schema = ALWAYS
