--- a/projetos-modelos/Writers/ArquivoLarguraFixaJob/src/main/resources/application.properties
+++ b/projetos-modelos/Writers/ArquivoLarguraFixaJob/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_batch
-spring.datasource.username=user
-spring.datasource.password=123456
-spring.batch.initialize-schema=always
+spring.datasource.url=jdbc:mysql://localhost:3306/jobrepository2
+spring.datasource.username=developer
+spring.datasource.password=developer
+
+# nunca criar as tabelas, caso j? existam o spring batch ignora
+spring.batch.jdbc.initialize-schema = ALWAYS
